--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id='map'></div>
         <script>
             
-            mapboxgl.accessToken = 'pk.eyJ1IjoibWpkYW5pZWxzb24iLCJhIjoiY2p2bzFlbnZ5MW5pbTN5cGJ2YWp2MW9vaiJ9.kAaZq3iyJwvrMLK7XDs_qw';
+            mapboxgl.accessToken = 'pk.eyJ1IjoibWpkYW5pZWxzb24iLCJhIjoiY2s5bTJodXluMHVhYTNybWk1eTMxN2lidiJ9.DU-KkKoefUHAlSidTjqsiQ';
             var map = new mapboxgl.Map({
             container: 'map', // container id
             style: 'mapbox://styles/mjdanielson/ck9brm73k01zu1ill4rypk6hq', // replace this with your style URL 
